--- a/ui/addstorage.ui
+++ b/ui/addstorage.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.19.0 -->
 <interface>
   <requires lib="gtk+" version="3.8"/>
   <object class="GtkAdjustment" id="adjustment1">
@@ -98,9 +98,9 @@
                   <object class="GtkLabel" id="phys-hd-label">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
-                    <property name="xalign">0</property>
                     <property name="label">&lt;span color='#484848'&gt;Free Space&lt;/span&gt;</property>
                     <property name="use_markup">True</property>
+                    <property name="xalign">0</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -219,6 +219,11 @@ Tip: Storage format qcow2 and qed do not support full allocation.</property>
             <property name="receives_default">True</property>
             <property name="use_underline">True</property>
             <signal name="clicked" handler="on_config_storage_browse_clicked" swapped="no"/>
+            <child internal-child="accessible">
+              <object class="AtkObject" id="config-storage-browse-atkobject">
+                <property name="AtkObject::accessible-name" translatable="yes">config-storage-browse</property>
+              </object>
+            </child>
           </object>
           <packing>
             <property name="expand">False</property>
