--- a/ui/addstorage.ui
+++ b/ui/addstorage.ui
@@ -25,7 +25,6 @@
             <property name="xalign">0</property>
             <property name="active">True</property>
             <property name="draw_indicator">True</property>
-            <property name="group">config-storage-select</property>
             <child>
               <object class="GtkLabel" id="label123">
                 <property name="visible">True</property>
@@ -108,51 +107,6 @@
                     <property name="position">1</property>
                   </packing>
                 </child>
-                <child>
-                  <object class="GtkHBox" id="hbox2">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="spacing">6</property>
-                    <child>
-                      <object class="GtkCheckButton" id="config-storage-nosparse">
-                        <property name="label" translatable="yes">_Allocate entire disk now</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <property name="use_underline">True</property>
-                        <property name="xalign">0</property>
-                        <property name="draw_indicator">True</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkImage" id="config-storage-nosparse-info">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="tooltip_text" translatable="yes">Fully allocating storage may take longer now, but the OS install phase will be quicker.
-
-Skipping allocation can also cause space issues on the host machine, if the maximum image size exceeds available storage space.
-
-Tip: Storage format qcow2 and qed do not support full allocation.</property>
-                        <property name="stock">gtk-info</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">1</property>
-                      </packing>
-                    </child>
-                  </object>
-                  <packing>
-                    <property name="expand">False</property>
-                    <property name="fill">False</property>
-                    <property name="position">2</property>
-                  </packing>
-                </child>
               </object>
             </child>
           </object>
@@ -173,31 +127,6 @@ Tip: Storage format qcow2 and qed do not support full allocation.</property>
       <object class="GtkHBox" id="hbox9">
         <property name="visible">True</property>
         <property name="can_focus">False</property>
-        <child>
-          <object class="GtkRadioButton" id="config-storage-select">
-            <property name="visible">True</property>
-            <property name="can_focus">True</property>
-            <property name="receives_default">False</property>
-            <property name="xalign">0</property>
-            <property name="draw_indicator">True</property>
-            <signal name="toggled" handler="on_config_storage_select_toggled" swapped="no"/>
-            <child>
-              <object class="GtkLabel" id="label124">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Select _managed or other existing storage</property>
-                <property name="use_markup">True</property>
-                <property name="use_underline">True</property>
-                <property name="mnemonic_widget">config-storage-select</property>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="position">0</property>
-          </packing>
-        </child>
       </object>
       <packing>
         <property name="expand">False</property>
@@ -206,22 +135,28 @@ Tip: Storage format qcow2 and qed do not support full allocation.</property>
       </packing>
     </child>
     <child>
-      <object class="GtkHBox" id="config-storage-browse-box">
+      <object class="GtkBox" id="box1">
         <property name="visible">True</property>
-        <property name="sensitive">False</property>
         <property name="can_focus">False</property>
+        <property name="orientation">vertical</property>
         <property name="spacing">6</property>
         <child>
-          <object class="GtkButton" id="config-storage-browse">
-            <property name="label" translatable="yes">Bro_wse...</property>
+          <object class="GtkRadioButton" id="config-storage-select">
             <property name="visible">True</property>
             <property name="can_focus">True</property>
-            <property name="receives_default">True</property>
-            <property name="use_underline">True</property>
-            <signal name="clicked" handler="on_config_storage_browse_clicked" swapped="no"/>
-            <child internal-child="accessible">
-              <object class="AtkObject" id="config-storage-browse-atkobject">
-                <property name="AtkObject::accessible-name" translatable="yes">config-storage-browse</property>
+            <property name="receives_default">False</property>
+            <property name="xalign">0</property>
+            <property name="active">True</property>
+            <property name="draw_indicator">True</property>
+            <property name="group">config-storage-create</property>
+            <signal name="toggled" handler="on_config_storage_select_toggled" swapped="no"/>
+            <child>
+              <object class="GtkLabel" id="label124">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Select _managed or other existing storage</property>
+                <property name="use_markup">True</property>
+                <property name="use_underline">True</property>
               </object>
             </child>
           </object>
@@ -232,12 +167,45 @@ Tip: Storage format qcow2 and qed do not support full allocation.</property>
           </packing>
         </child>
         <child>
-          <object class="GtkEntry" id="config-storage-entry">
+          <object class="GtkHBox" id="config-storage-browse-box">
             <property name="visible">True</property>
-            <property name="can_focus">True</property>
+            <property name="sensitive">False</property>
+            <property name="can_focus">False</property>
+            <property name="spacing">6</property>
+            <child>
+              <object class="GtkButton" id="config-storage-browse">
+                <property name="label" translatable="yes">Bro_wse...</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <property name="use_underline">True</property>
+                <signal name="clicked" handler="on_config_storage_browse_clicked" swapped="no"/>
+                <child internal-child="accessible">
+                  <object class="AtkObject" id="config-storage-browse-atkobject">
+                    <property name="AtkObject::accessible-name" translatable="yes">config-storage-browse</property>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="expand">False</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry" id="config-storage-entry">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">1</property>
+              </packing>
+            </child>
           </object>
           <packing>
-            <property name="expand">True</property>
+            <property name="expand">False</property>
             <property name="fill">True</property>
             <property name="position">1</property>
           </packing>
